<resources>
    <string name="app_name">Blackjack</string>
    <string name="menu">Sunway Blackjack</string>
    <string name="start">Play</string>
    <string name="pass">pass</string>
    <string name="win">You Win!</string>
    <string name="lose">You Lose!</string>
    <string name="draw">It\'s a draw</string>
    <string name="drawcard">draw</string>
    <string name="playagain">Play Again?</string>
    <string name="rule">Rules</string>
    <string name="rule1">1. The deck is unlimited in size.</string>
    <string name="rule2">2. There are no jokers.</string>
    <string name="rule3">3. The Jack/Queen/King all count as 10.</string>
    <string name="rule4">4. The Ace can count as 11 or 1.</string>
    <string name="rule5">5. Use the following list as the deck of cards:
        cards = </string>
    <string name="cards">[11, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 10, 10]</string>
    <string name="rule6">6. The cards in the list have equal probability of being drawn.</string>
    <string name="rule7">7. Cards are not removed from the deck as they are drawn.</string>
</resources>