<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rulebook">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/back"
        android:alpha="0.2">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule"
        android:id="@+id/rules"
        android:textSize="40sp"
        app:fontFamily="@font/comfortaa_bold"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rule1"
        android:text="@string/rule1"
        android:layout_below="@+id/rules"
        android:layout_centerHorizontal="true"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule2"
        android:id="@+id/rule2"
        android:layout_below="@+id/rule1"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule3"
        android:id="@+id/rule3"
        android:layout_below="@+id/rule2"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule4"
        android:id="@+id/rule4"
        android:layout_below="@+id/rule3"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule5"
        android:id="@+id/rule5"
        android:layout_below="@+id/rule4"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards"
        android:id="@+id/rule6"
        android:layout_below="@+id/rule5"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule6"
        android:id="@+id/rule7"
        android:layout_below="@+id/rule6"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule7"
        android:id="@+id/rule8"
        android:layout_below="@+id/rule7"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/rule1"
        app:fontFamily="@font/comfortaa_light"
        android:textSize="24sp" />

</RelativeLayout>