<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blackjack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_result"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:fontFamily="@font/raleway_semibolditalic" />

    <ImageView
        android:id="@+id/poker_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/poker_table"
        app:tint="@color/white"
        android:alpha="0.9"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/back"
        android:alpha="0.2">
    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/pc1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="55dp"
        android:alpha="0.9"/>

    <ImageView
        android:id="@+id/pc2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="205dp"
        android:visibility="invisible"
        android:alpha="0.9"/>

    <ImageView
        android:id="@+id/card"
        android:layout_width="123dp"
        android:layout_height="151dp"
        android:layout_marginTop="119dp"
        android:layout_marginLeft="218dp"
        android:background="@drawable/card"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pcSumDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp"
        android:textSize="25sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDraw"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/pcSumDisplay"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/game_button"
        android:text="@string/drawcard"
        app:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPass"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/btnDraw"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/game_button"
        android:text="@string/pass"
        app:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userSumDisplay"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnPass"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/user1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="55dp"
        android:layout_gravity="start"
        android:alpha="0.9"/>

    <ImageView
        android:id="@+id/user2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="205dp"
        android:alpha="0.9"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pcDrawn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:alpha="0.9"/>

        <ImageView
            android:id="@+id/userDrawn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="600dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:alpha="0.9"/>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlay_Again"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginTop="395dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/game_button"
        android:text="@string/playagain"
        app:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="invisible" />

</RelativeLayout>